[package]
name = "token-coding-challenge"
version = "0.1.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"

[dependencies]
egg-mode = { version = "0.13.0", features = ["hyper-rustls"], default-features = false }
structopt = "0.3.3"
anyhow = "1.0.17"
thiserror = "1.0.3"
tokio = "0.1.22"
