[package]
name = "token-coding-challenge"
version = "0.1.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"

[dependencies]
egg-mode = { version = "0.13.0", features = ["hyper-rustls"], default-features = false }
structopt = "0.3.3"
anyhow = "1.0.17"
thiserror = "1.0.3"
tokio = "0.1.22"
sentiment = "0.1.1"
log = "0.4.8"
serde_yaml = "0.8.11"
toml = "0.5.3"
serde = { version = "1.0.101", features = ["derive"] }
futures = "0.1.29"
canteen = "0.5.1"
